# HardBore

./: .gitignore  README.md  TODO  hardbore.desktop  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
AUR/: PKGBUILD
AUR-bin/: PKGBUILD
portal/: Cargo.toml  hardbore.portal  install.sh  org.freedesktop.impl.portal.desktop.hardbore.service
portal/src/: main.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: stress_test.rs
src-tauri/capabilities/: default.json
src-tauri/src/: fs_engine.rs  indexer.rs  lib.rs  main.rs
src/lib/: store.ts  types.ts  utils.ts
src/lib/components/: Breadcrumb.svelte  CommandPalette.svelte  ContextMenu.svelte  FileList.svelte  PickerBar.svelte  PreviewPane.svelte  ResizableDivider.svelte  Sidebar.svelte  StatusBar.svelte
src/routes/: +page.svelte
