[package]
name = "hardbore-portal"
version = "1.0.0"
description = "XDG Desktop Portal backend for HardBore"
authors = ["FrogSnot"]
license = "AGPL-3.0"
edition = "2021"

[[bin]]
name = "portal"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zbus = "4.4"
async-trait = "0.1"
