[package]
name = "hardbore"
version = "1.0.0"
description = "High-performance file manager - Speed as a Luxury"
authors = ["FrogSnot"]
license = "AGPL-3.0"
edition = "2021"
default-run = "hardbore"

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]

[lib]
name = "hardbore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stress_test"
path = "benches/stress_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


jwalk = "0.8"


rusqlite = "0.33"




chrono = { version = "0.4", features = ["serde"] }
dirs = "5"


rayon = "1.10"
num_cpus = "1.16"


fuzzy-matcher = "0.3"


bincode = "1.3"
bytemuck = { version = "1.18", features = ["derive"] }


